tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__profile_list_empty_frappe.snap
---
source: tests/snapshots/theme_snapshots_test.rs
expression: output
---
╭────────────────────────────────── Profiles ──────────────────────────────────╮
│                               No profiles found                              │
│                                                                              │
│                    Press 'n' to create your first profile                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ ↑/↓: Navigate | Enter: View | e: Edit | l: Launch | n: New | d: Delete | /: S╯
