tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__profile_list_empty_latte.snap
---
source: tests/snapshots/theme_snapshots_test.rs
expression: output
---
╭────────────────────────────────── Profiles ──────────────────────────────────╮
│                               No profiles found                              │
│                                                                              │
│                    Press 'n' to create your first profile                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ Up, k: Navigate | Down, j: Navigate | Enter, Space: View | e: Edit | l: Launc╯
