tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__tab_bar_extensions_frappe.snap
---
source: tests/snapshots/theme_snapshots_test.rs
assertion_line: 36
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────╮
│  Extensions   │   Profiles                                                   │
╰──────────────────────────────────────────────────────────────────────────────╯
