tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__tab_bar_extensions_macchiato.snap
---
source: tests/snapshots/theme_snapshots_test.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────╮
│  Extensions   │   Profiles   │   Settings                                    │
╰──────────────────────────────────────────────────────────────────────────────╯
