tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__tab_bar_profiles_latte.snap
---
source: tests/snapshots/theme_snapshots_test.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────╮
│  Extensions   │   Profiles                                                   │
╰──────────────────────────────────────────────────────────────────────────────╯
